--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.shadow-lg-soft {
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.15);
+}
