FIX | Layout Fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 .shadow-lg-soft {
   box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.15);
 }
+
+.calc-height {
+  height: calc(100vh - 100px);
+}
+
+.calc-width {
+  width: calc(100vw - 20vw);
+}
