--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --base-font-size: 14px;
+  font-size: var(--base-font-size);
+  font-family: "Poppins", sans-serif;
+}
+
 .shadow-lg-soft {
   box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.15);
 }
@@ -12,4 +18,10 @@
 
 .calc-width {
   width: calc(100vw - 20vw);
+}
+
+.recharts-wrapper > svg {
+  width: 100% !important;
+  height: 100% !important;
+  fill: #000;
 }
